Cleanup text alignment in parallel speech corpus doc

--- a/docs/works/parallel-speech-corpus.mdx
+++ b/docs/works/parallel-speech-corpus.mdx
@@ -401,42 +401,47 @@ Number of syllables:
 <Tabs  groupId="sobis-yê-cîes">
     <TabItem value="CMN" label="CMN">
         我妻子下个月有一个复杂的飞行计划。请你给建议一个最划算的安排。她要参加一系列
-    会议，在上海、兰州、武汉、成都和广州连续几天，每天从上午9点到下午5点。你能建议一下
-    方便的夜晚航班和合适的食宿安排吗？她不喜欢大的、不知名的酒店。
+        会议，在上海、兰州、武汉、成都和广州连续几天，每天从上午9点到下午5点。你能建议一下
+        方便的夜晚航班和合适的食宿安排吗？她不喜欢大的、不知名的酒店。
     </TabItem>
     <TabItem value="ENG" label="ENG">
-        My wife has a complicated flight schedule next month. Would you please advise me on the most 
-    economical arrangements? She has a series of meetings, 9am to 5pm, in Paris, Bruges, Frankfurt, 
-    Rome, and Hamburg on consecutive days. Can you suggest convenient evening flights and suitable 
-    accomodation? She doesn't like large, anonymous hotels.
+        My wife has a complicated flight schedule next month. Would you please
+        advise me on the most economical arrangements? She has a series of
+        meetings, 9am to 5pm, in Paris, Bruges, Frankfurt, Rome, and Hamburg on
+        consecutive days. Can you suggest convenient evening flights and
+        suitable accomodation? She doesn't like large, anonymous hotels.
     </TabItem>
     <TabItem value="HIS" label="Hîsyêô" default><HisyeoText kind='latin'>
         TBC
     </HisyeoText></TabItem>
     <TabItem value="JPN" label="JPN">
         来月、妻がパリ、ブリュージュ、フランクフルト、ローマ及びハンブルクで行われる一
-    連の会議に出席する予定です。最も経済的なフライトスケジュールをご相談したいのですが
-    。会議は4日間で、連日午前9時から午後5時までです。夕方の便と、宿泊のお勧めプランが
-    ありますか。ちなみに、妻は大きくても有名でないホテルは好みません。
+        連の会議に出席する予定です。最も経済的なフライトスケジュールをご相談したいのですが
+        。会議は4日間で、連日午前9時から午後5時までです。夕方の便と、宿泊のお勧めプランが
+        ありますか。ちなみに、妻は大きくても有名でないホテルは好みません。
     </TabItem>
     <TabItem value="SPA" label="SPA">
-        Soy la secretaria del Sr. Martínez. El mes próximo tienen que ir a cinco ciudades distintas. 
-    ¿Podrían ayudarme a organizar el viaje? Tiene una serie de reuniones, entre 9 de la mañana y 5 de la 
-    tarde, en París, Brujas, Ginebra, Roma y Hamburgo, en días consecutivos. ¿Qué vuelos podría coger 
-    por la tarde? ¿Y qué alojamiento sería mejor? Al Sr.Martínez no le gustan las grandes cadenas de 
-    hoteles. Preferiría un hotel con ambiente familiar.
+        Soy la secretaria del Sr. Martínez. El mes próximo tienen que ir a cinco
+        ciudades distintas. ¿Podrían ayudarme a organizar el viaje? Tiene una
+        serie de reuniones, entre 9 de la mañana y 5 de la tarde, en París,
+        Brujas, Ginebra, Roma y Hamburgo, en días consecutivos. ¿Qué vuelos
+        podría coger por la tarde? ¿Y qué alojamiento sería mejor? Al
+        Sr.Martínez no le gustan las grandes cadenas de hoteles. Preferiría un
+        hotel con ambiente familiar.
     </TabItem>
     <TabItem value="THA" label="THA">
         ภรรยายของผมมีตารางบินที่ซับซ้อนในเดือนหน้า ช่วยกรุณาแนะนา และจดัเที่ยวบินราคาประหยดัให้ไดไ้หมครับ ภรรยายของผมมีประชุมต้งัแต่
-    9.00-17.00 น. ที่กรุงเทพฯ, เวียงจันทร์, พนมเปญ, ยา่ งกุง้ และปี นัง ในวันถัดไป กรุณาจัดเที่ยวบินเวลากลางคืน และที่พักที่สะดวกและเหมาะสม
-    ภรรยายของผมไม่ชอบโรงแรมขนาดใหญ่ที่ไม่เป็นที่รู้จกั
+        9.00-17.00 น. ที่กรุงเทพฯ, เวียงจันทร์, พนมเปญ, ยา่ งกุง้ และปี นัง ในวันถัดไป กรุณาจัดเที่ยวบินเวลากลางคืน และที่พักที่สะดวกและเหมาะสม
+        ภรรยายของผมไม่ชอบโรงแรมขนาดใหญ่ที่ไม่เป็นที่รู้จกั
     </TabItem>
     <TabItem value="VIE" label="VIE">
-        Tháng tới vợ tôi sẽ đi dự hội thảo ở rất nhiều nước. Các cuộc hội thảo thường bắt đầu từ chín giờ 
-    sáng đến mười bảy giờ; kéo dài trong bốn ngày liên tiếp và được tổ chức ở các địa điểm khác nhau: 
-    đầu tiên ở Hà Nội; tiếp đó đến Ðà Nẵng; Nha Trang và cuối cùng là thành phố Hồ Chí Minh. Chị có 
-    thể tư vấn cho vợ tôi nên chọn khách sạn nào; chuyến bay tối nào được không? Cô ấy không thích các 
-    khách sạn lớn; cô ấy thích các khách sạn nhỏ; yên tĩnh.
+        Tháng tới vợ tôi sẽ đi dự hội thảo ở rất nhiều nước. Các cuộc hội thảo
+        thường bắt đầu từ chín giờ sáng đến mười bảy giờ; kéo dài trong bốn ngày
+        liên tiếp và được tổ chức ở các địa điểm khác nhau: đầu tiên ở Hà Nội;
+        tiếp đó đến Ðà Nẵng; Nha Trang và cuối cùng là thành phố Hồ Chí Minh.
+        Chị có thể tư vấn cho vợ tôi nên chọn khách sạn nào; chuyến bay tối nào
+        được không? Cô ấy không thích các khách sạn lớn; cô ấy thích các khách
+        sạn nhỏ; yên tĩnh.
     </TabItem>
 </Tabs>
 
@@ -446,41 +451,48 @@ Number of syllables:
 
 <Tabs groupId="sobis-yê-cîes">
     <TabItem value="CMN" label="CMN">
-        我们要为一个大型会议咨询订餐。我们想要食品送到会场，可以直接吃。那里没有房间
-    可以存放食物。我们考虑选择三明治、肉、奶酪和水果。你们有针对学术机构的协议价吗？
+        我们要为一个大型会议咨询订餐。我们想要食品送到会场，可以直接吃。那里没有
+        房间可以存放食物。我们考虑选择三明治、肉、奶酪和水果。你们有针对学术机构
+        的协议价吗？
     </TabItem>
     <TabItem value="ENG" label="ENG">
-        We are enquiring into possible catering arrangements for a large meeting. We would need to 
-    have the food delivered to the premises in a manner that would allow immediate consumption. There 
-    are no facilities for setting out the food in a separate room. We were thinking of a selection of 
-    sandwiches, meats, cheeses, and fruit. Do you have special corporate rates for academic institutions?
+        We are enquiring into possible catering arrangements for a large
+        meeting. We would need to have the food delivered to the premises in a
+        manner that would allow immediate consumption. There are no facilities
+        for setting out the food in a separate room. We were thinking of a
+        selection of sandwiches, meats, cheeses, and fruit. Do you have special
+        corporate rates for academic institutions?
     </TabItem>
     <TabItem value="HIS" label="Hîsyêô" default><HisyeoText kind='latin'>
         TBC
     </HisyeoText></TabItem>
     <TabItem value="JPN" label="JPN">
-        会議用仕出しのデリバリーに関してお伺いします。料理を盛り付けるための別室を用意
-    しておりませんので、出来合いの食事を届けていただく必要があるのですが可能でしょうか
-    。サンドウィッチ，お肉料理，チーズ，果物からの選択を考えています。あと、教育機関向
-    けの優遇価格がありますか。
+        会議用仕出しのデリバリーに関してお伺いします。料理を盛り付けるための別室
+        を用意しておりませんので、出来合いの食事を届けていただく必要があるのです
+        が可能でしょうか。サンドウィッチ，お肉料理，チーズ，果物からの選択を考え
+        ています。あと、教育機関向けの優遇価格がありますか。
     </TabItem>
     <TabItem value="SPA" label="SPA">
-        Necesitamos información sobre el servicio de restauración para un congreso con muchos 
-    participantes. Querríamos que nos trajeran la comida ya preparada para poder comer en la misma sala 
-    de reuniones. No disponemos de un espacio aparte para servirla. Habíamos pensado en un surtido de 
-    bocadillos, embutidos, quesos y frutas. ¿Tienen precios especiales para grupos o para instituciones 
-    académicas?
+        Necesitamos información sobre el servicio de restauración para un
+        congreso con muchos participantes. Querríamos que nos trajeran la comida
+        ya preparada para poder comer en la misma sala de reuniones. No
+        disponemos de un espacio aparte para servirla. Habíamos pensado en un
+        surtido de bocadillos, embutidos, quesos y frutas. ¿Tienen precios
+        especiales para grupos o para instituciones académicas?
     </TabItem>
     <TabItem value="THA" label="THA">
-        เราขอสอบถามความเป็นไปไดเ้กี่ยวกบัการจดัเล้ียงสา หรับงานประชุมขนาดใหญ่ เราตอ้งการให้มีอาหารมาส่งที่สถานที่แบบพร้อมทานได้เลย
-    เราไม่มีสิ่งอา นวยความสะดวกสา หรับจดัเตรียมอาหารในห้องแยกออกมา เราคิดวา่ อยากให้มีแซนวิช เน้ือสตัว์เนยแข็งและผลไม้หลายๆ แบบให้เลือกทานได้
-    คุณมีราคาพิเศษส าหรับสถานศึกษา หรือปล่าวค่ะ
+        เราขอสอบถามความเป็นไปไดเ้กี่ยวกบัการจดัเล้ียงสา หรับงานประชุมขนาดใหญ่
+        เราตอ้งการให้มีอาหารมาส่งที่สถานที่แบบพร้อมทานได้เลย เราไม่มีสิ่งอา
+        นวยความสะดวกสา หรับจดัเตรียมอาหารในห้องแยกออกมา เราคิดวา่
+        อยากให้มีแซนวิช เน้ือสตัว์เนยแข็งและผลไม้หลายๆ แบบให้เลือกทานได้
+        คุณมีราคาพิเศษส าหรับสถานศึกษา หรือปล่าวค่ะ
     </TabItem>
     <TabItem value="VIE" label="VIE">
-        Chúng tôi đang tìm thông tin về tổ chức tiệc cho Hội nghị. Chúng tôi muốn tổ chức tập chung tại 
-    một địa điểm. Vì không đặt được phòng to để bày các bàn tiệc; nên có lẽ chúng tôi sẽ tổ chức tiệc 
-    đứng với bánh mỳ; thịt nguội; pho mát và hoa quả. Chị có bảng giá đặc biệt dành cho các cơ quan 
-    không? Trường Ðại học có được hưởng giá đặc biệt không?
+        Chúng tôi đang tìm thông tin về tổ chức tiệc cho Hội nghị. Chúng tôi
+        muốn tổ chức tập chung tại một địa điểm. Vì không đặt được phòng to để
+        bày các bàn tiệc; nên có lẽ chúng tôi sẽ tổ chức tiệc đứng với bánh mỳ;
+        thịt nguội; pho mát và hoa quả. Chị có bảng giá đặc biệt dành cho các cơ
+        quan không? Trường Ðại học có được hưởng giá đặc biệt không?
     </TabItem>
 </Tabs>
 
@@ -491,38 +503,43 @@ Number of syllables:
 <Tabs  groupId="sobis-yê-cîes">
     <TabItem value="CMN" label="CMN">
         快派个救护车到朝阳园16号。有个老人在冰上滑倒，腿摔断了，不能动。到这里只能经
-    光华路，因为朝阳北路在修路，不通车。已经通知朝阳三医院了，只等人到了。
+        光华路，因为朝阳北路在修路，不通车。已经通知朝阳三医院了，只等人到了。
     </TabItem>
     <TabItem value="ENG" label="ENG">
-        Send an ambulance to sixteen Chadwick Close as soon as possible. An old man has slipped on 
-    the ice and broken his leg, and can't be moved. Access to the Close is via Church Street only. The Park 
-    Avenue approach has been closed for road repairs. Chester Grange Hospital has been informed, and 
-    awaits arrival.
+        Send an ambulance to sixteen Chadwick Close as soon as possible. An old
+        man has slipped on the ice and broken his leg, and can't be moved.
+        Access to the Close is via Church Street only. The Park Avenue approach
+        has been closed for road repairs. Chester Grange Hospital has been
+        informed, and awaits arrival.
     </TabItem>
     <TabItem value="HIS" label="Hîsyêô" default><HisyeoText kind='latin'>
-        s
+        TBC
     </HisyeoText></TabItem>
     <TabItem value="JPN" label="JPN">
-        救急車をお願いします。山田町16番地で、ご年配の男性が氷の上で滑って、足を骨折し
-    、動けない状態です。尚、国道一号線は道路工事のため通行止めとなっておりますので現場
-    へは新橋経由でお願いします。阪大付属病院には既に連絡がいっており、患者さんを待ち受
-    けているとのことです。
+        救急車をお願いします。山田町16番地で、ご年配の男性が氷の上で滑って、足を
+        骨折し、動けない状態です。尚、国道一号線は道路工事のため通行止めとなって
+        おりますので現場へは新橋経由でお願いします。阪大付属病院には既に連絡が
+        いっており、患者さんを待ち受けているとのことです。
     </TabItem>
     <TabItem value="SPA" label="SPA">
-        Envíen una ambulancia al número dieciséis del Pasaje de la Concepción lo más rápido que 
-    puedan. Un anciano ha resbalado, se ha roto la pierna y no se puede mover. Al Pasaje sólo se puede 
-    llegar por la calle de la Iglesia. La entrada por la Avenida del Parque está cerrada por obras. Ya hemos 
-    avisado al Hospital General y esperan al herido.
+        Envíen una ambulancia al número dieciséis del Pasaje de la Concepción lo
+        más rápido que puedan. Un anciano ha resbalado, se ha roto la pierna y
+        no se puede mover. Al Pasaje sólo se puede llegar por la calle de la
+        Iglesia. La entrada por la Avenida del Parque está cerrada por obras. Ya
+        hemos avisado al Hospital General y esperan al herido.
     </TabItem>
     <TabItem value="THA" label="THA">
-        ช่วยส่งรถพยาบาลมาที่บา้นเลขที่ 16 สาธร ด่วน มีคนแก่เพศชายลื่นน้า ลม้ขาหกัและตอนน้ีขยบัไม่ได้ถนนสีลม ทางเข้าหลัก สาธร ปิดซ่อนแซม
-    รถพยาบานต้องเข้ามาทางโบสถ์เซ็นหลุยส์เท่าน้นั โรงพยาบาลเซ็นหลุยส์รับเรื่องแลว้และกา ลงัรอรถพยาบาลมาส่งผปู้่วยอยู่
+        ช่วยส่งรถพยาบาลมาที่บา้นเลขที่ 16 สาธร ด่วน มีคนแก่เพศชายลื่นน้า
+        ลม้ขาหกัและตอนน้ีขยบัไม่ได้ถนนสีลม ทางเข้าหลัก สาธร ปิดซ่อนแซม
+        รถพยาบานต้องเข้ามาทางโบสถ์เซ็นหลุยส์เท่าน้นั
+        โรงพยาบาลเซ็นหลุยส์รับเรื่องแลว้และกา ลงัรอรถพยาบาลมาส่งผปู้่วยอยู่
     </TabItem>
     <TabItem value="VIE" label="VIE">
-        Xin điều khẩn cấp một xe cứu thương đến số nhà 16; ngõ Phan Chu Trinh. Có một ông già bị 
-    trượt chân và ngã bên lề đường; ông ấy không thể cử động được chân. Có thể ông ấy đã bị gẫy chân. 
-    Các anh nên đi đường Trần Hưng Ðạo; đường Phan Chu Trinh đang bị cấm. Chúng tôi đã báo cho 
-    phòng cấp cứu bệnh viện Bạch Mai; nhân viên trực cấp cứu đang chờ ở đó.
+        Xin điều khẩn cấp một xe cứu thương đến số nhà 16; ngõ Phan Chu Trinh.
+        Có một ông già bị trượt chân và ngã bên lề đường; ông ấy không thể cử
+        động được chân. Có thể ông ấy đã bị gẫy chân. Các anh nên đi đường Trần
+        Hưng Ðạo; đường Phan Chu Trinh đang bị cấm. Chúng tôi đã báo cho phòng
+        cấp cứu bệnh viện Bạch Mai; nhân viên trực cấp cứu đang chờ ở đó.
     </TabItem>
 </Tabs>
 
@@ -533,39 +550,45 @@ Number of syllables:
 
 <Tabs groupId="sobis-yê-cîes">
     <TabItem value="CMN" label="CMN">
-        请接圣诞节订货部。我想订10盒圣诞薄饼，5盒混合饼干，还有三个大圣诞蛋糕。收件地
-    址是西城二龙路16号，王大雷医生家。你们能保证12月23号之前送到吗？请帮订货人保密，谢
-    谢。
+        请接圣诞节订货部。我想订10盒圣诞薄饼，5盒混合饼干，还有三个大圣诞蛋糕。
+        收件地址是西城二龙路16号，王大雷医生家。你们能保证12月23号之前送到吗？请
+        帮订货人保密，谢谢。
     </TabItem>
     <TabItem value="ENG" label="ENG">
-        Christmas order department please. I wish to place an order for ten boxes of Christmas crackers, 
-    five boxes of mixed biscuits, and three large Christmas cakes. The address for delivery is Dr Barnado's 
-    Home, 16 Treasure Island Road. Can you guarantee delivery by 23rd December? I should be grateful 
-    if you would not disclose who placed the order.
+        Christmas order department please. I wish to place an order for ten
+        boxes of Christmas crackers, five boxes of mixed biscuits, and three
+        large Christmas cakes. The address for delivery is Dr Barnado's Home, 16
+        Treasure Island Road. Can you guarantee delivery by 23rd December? I
+        should be grateful if you would not disclose who placed the order.
     </TabItem>
     <TabItem value="JPN" label="JPN">
-        もしもし、クリスマスギフトセンターをお願いします。クリスマス・クラッカーを10箱
-    、クッキーの詰め合わせを5箱、Lサイズのクリスマスケーキを3台注文したいのですが。配
-    達先は恵比寿通り16番地の小池先生のお宅です。12月23日までに配達していただけますか。
-    あと、誰が注文したのか内緒にしておきたいのですが。
+        もしもし、クリスマスギフトセンターをお願いします。クリスマス・クラッカー
+        を10箱、クッキーの詰め合わせを5箱、Lサイズのクリスマスケーキを3台注文し
+        たいのですが。配達先は恵比寿通り16番地の小池先生のお宅です。12月23日まで
+        に配達していただけますか。あと、誰が注文したのか内緒にしておきたいのです
+        が。
     </TabItem>
     <TabItem value="SPA" label="SPA">
-        Por favor, quisiera encargar un lote de Navidad. Quiero una cesta con diez tabletas de turrones 
-    variados, cinco cajas pequeñas de polvorones y tres de mazapanes. Tienen que enviarlo a la casa del 
-    doctor Ruiz, en la calle de Alcalá, número 16. ¿Lo podrían entregar el 23 de diciembre sin falta? Pero 
-    no digan quién hizo el pedido, es una sorpresa.
+        Por favor, quisiera encargar un lote de Navidad. Quiero una cesta con
+        diez tabletas de turrones variados, cinco cajas pequeñas de polvorones y
+        tres de mazapanes. Tienen que enviarlo a la casa del doctor Ruiz, en la
+        calle de Alcalá, número 16. ¿Lo podrían entregar el 23 de diciembre sin
+        falta? Pero no digan quién hizo el pedido, es una sorpresa.
     </TabItem>
     <TabItem value="THA" label="THA">
-        กรุณาต่อฝ่ายสงั่ ของคริสมาสตค์ ่ะ ฉนัอยากจะสงั่ ขนมปังกรอบวนัคริสมาสตส์ิบกล่อง บิสกิตรวมรสห้ากล่อง เคก้วนัคริสมาสตข์ นาดใหญ่สามกอ้น
-    กรุณาส่งไปที่บา้นด๊อกเตอร์ภาณุ บ้านเลขที่ 16 ถนน มหาสมบัติรับประกนัไดห้ รือไม่วา่ จะมาส่งก่อนวนั ที่ 23 ธันวาคม 
-    และเวลาส่งของเหล่าน้ีกรุณาอยา่ บอกชื่อผสู้งั่ นะค่ะ
+        กรุณาต่อฝ่ายสงั่ ของคริสมาสตค์ ่ะ ฉนัอยากจะสงั่
+        ขนมปังกรอบวนัคริสมาสตส์ิบกล่อง บิสกิตรวมรสห้ากล่อง เคก้วนัคริสมาสตข์
+        นาดใหญ่สามกอ้น กรุณาส่งไปที่บา้นด๊อกเตอร์ภาณุ บ้านเลขที่ 16 ถนน
+        มหาสมบัติรับประกนัไดห้ รือไม่วา่ จะมาส่งก่อนวนั ที่ 23 ธันวาคม
+        และเวลาส่งของเหล่าน้ีกรุณาอยา่ บอกชื่อผสู้งั่ นะค่ะ
     </TabItem>
     <TabItem value="VIE" label="VIE">
-        Có phải tiệm bánh Hồng Ngọc đấy không ạ? Tôi là Chi đây. Tôi muốn nhờ nhà hàng chuyển quà 
-    tết trung thu cho bạn tôi. Tôi muốn chuyển một cân hoa quả sấy khô; năm hộp bánh trung thu và ba 
-    hộp bánh mặn đến nhà Bà Bác sỹ Mai; ở số nhà hai trăm bốn nhăm; đường Hoàng Hoa Thám; tối ngày 
-    ba mươi tháng chín. Tôi muốn gây bất ngờ cho Bà Mai vì thế anh đừng cho bà ấy biết là tôi chuyển 
-    món quà này.
+        Có phải tiệm bánh Hồng Ngọc đấy không ạ? Tôi là Chi đây. Tôi muốn nhờ
+        nhà hàng chuyển quà tết trung thu cho bạn tôi. Tôi muốn chuyển một cân
+        hoa quả sấy khô; năm hộp bánh trung thu và ba hộp bánh mặn đến nhà Bà
+        Bác sỹ Mai; ở số nhà hai trăm bốn nhăm; đường Hoàng Hoa Thám; tối ngày
+        ba mươi tháng chín. Tôi muốn gây bất ngờ cho Bà Mai vì thế anh đừng cho
+        bà ấy biết là tôi chuyển món quà này.
     </TabItem>
 </Tabs>
 
@@ -576,37 +599,43 @@ Number of syllables:
 <Tabs groupId="sobis-yê-cîes">
     <TabItem value="CMN" label="CMN">
         昨天晚上，我打开前门，把猫放出去。夜景真好，我走到花园，呼吸新鲜空气。然后，
-    我听到身后，门咣的一声就关上了。我意识到把自己锁到门外了。最倒霉的还在后面，我试着
-    撬门，结果被警察逮捕了。
+        我听到身后，门咣的一声就关上了。我意识到把自己锁到门外了。最倒霉的还在后面，我试着
+        撬门，结果被警察逮捕了。
     </TabItem>
     <TabItem value="ENG" label="ENG">
-        Last night I opened the front door to let the cat out. It was such a beautiful evening that I 
-    wandered down the garden for a breath of fresh air. Then I heard a click as the door closed behind me. 
-    I realised I'd locked myself out. To cap it all, I was arrested while I was trying to force the door open!
+        Last night I opened the front door to let the cat out. It was such a
+        beautiful evening that I wandered down the garden for a breath of fresh
+        air. Then I heard a click as the door closed behind me. I realised I'd
+        locked myself out. To cap it all, I was arrested while I was trying to
+        force the door open!
     </TabItem>
     <TabItem value="HIS" label="Hîsyêô" default><HisyeoText kind='latin'>
-        s
+        TBC
     </HisyeoText></TabItem>
     <TabItem value="JPN" label="JPN">
-        昨夜、猫を外に出してやろうと玄関を開けたら、とても気持のいい夜だった。新鮮な空
-    気を吸おうと、僕も庭へ出てみると、背後でドアの閉まるカチッと言う音が聞こえ、締め出
-    されてしまった。挙句の果てに、ドアをこじ開けようとしているところを逮捕されてしまっ
-    た。
+        昨夜、猫を外に出してやろうと玄関を開けたら、とても気持のいい夜だった。新
+        鮮な空気を吸おうと、僕も庭へ出てみると、背後でドアの閉まるカチッと言う音
+        が聞こえ、締め出されてしまった。挙句の果てに、ドアをこじ開けようとしてい
+        るところを逮捕されてしまった。
     </TabItem>
     <TabItem value="SPA" label="SPA">
-        Anoche, abrí la puerta del jardín para sacar al gato. Hacía una noche tan buena que pensé en dar 
-    un paseo y respirar el aire fresco. De repente, se me cerró la puerta. Me quedé en la calle, sin llaves. 
-    Para rematarlo, me arrestaron cuando trataba de forzar la puerta para entrar.
+        Anoche, abrí la puerta del jardín para sacar al gato. Hacía una noche
+        tan buena que pensé en dar un paseo y respirar el aire fresco. De
+        repente, se me cerró la puerta. Me quedé en la calle, sin llaves. Para
+        rematarlo, me arrestaron cuando trataba de forzar la puerta para entrar.
     </TabItem>
     <TabItem value="THA" label="THA">
-        เมื่อคืนก่อนฉนั เปิดประตูหนา้บา้นเพื่อปล่อยแมวออกไปขา้งนอก แต่พอเห็นวา่ เยน็ น้นัอากาศนอกบา้นดีมากฉนัก็เลยเดินออกไปที่สวนเพื่อสูดอากาศ
-    พอฉนั ไดย้นิเสียงแกร๊กจากประตูจึงนึกไดว้า่ ประตูล๊อกและฉนั ติดอ ยนู่ อกบา้นแลว้ตา รวจก็มาจบั ฉนั ตอนที่ฉนั พยายามจะงดัประตูเปิด
+        เมื่อคืนก่อนฉนั เปิดประตูหนา้บา้นเพื่อปล่อยแมวออกไปขา้งนอก แต่พอเห็นวา่
+        เยน็ น้นัอากาศนอกบา้นดีมากฉนัก็เลยเดินออกไปที่สวนเพื่อสูดอากาศ พอฉนั
+        ไดย้นิเสียงแกร๊กจากประตูจึงนึกไดว้า่ ประตูล๊อกและฉนั ติดอ ยนู่
+        อกบา้นแลว้ตา รวจก็มาจบั ฉนั ตอนที่ฉนั พยายามจะงดัประตูเปิด
     </TabItem>
     <TabItem value="VIE" label="VIE">
-        Tối qua; tôi đã mở cửa cho con mèo ra ngoài. Vì trời rất đẹp; không khí thoáng đãng nên tôi 
-    quyết định đi dạo một chút. Mới chỉ bước được vài bước tôi nghe thấy tiếng cửa ra vào đóng sập lại 
-    đằng sau. Tôi nhận ra là mình đã bị nhốt ở ngoài. Ðiều làm tôi bực mình là tôi đã bị bắt giữ khi đang 
-    cố gắng mở cửa để vào nhà!
+        Tối qua; tôi đã mở cửa cho con mèo ra ngoài. Vì trời rất đẹp; không khí
+        thoáng đãng nên tôi quyết định đi dạo một chút. Mới chỉ bước được vài
+        bước tôi nghe thấy tiếng cửa ra vào đóng sập lại đằng sau. Tôi nhận ra
+        là mình đã bị nhốt ở ngoài. Ðiều làm tôi bực mình là tôi đã bị bắt giữ
+        khi đang cố gắng mở cửa để vào nhà!
     </TabItem>
 </Tabs>
 
@@ -617,39 +646,44 @@ Number of syllables:
 <Tabs groupId="sobis-yê-cîes">
     <TabItem value="CMN" label="CMN">
         我发现在英国的长途火车上睡觉太难了。一方面，那座位一点都不舒服。还有其他乘客
-    大声讲话。最烦人的是，还有人打鼾。再有就是车轮撞铁轨的声音。好不容易眯着了，又被查
-    票的叫醒了。
+        大声讲话。最烦人的是，还有人打鼾。再有就是车轮撞铁轨的声音。好不容易眯着了，又被查
+        票的叫醒了。
     </TabItem>
     <TabItem value="ENG" label="ENG">
         I've always found it difficult to sleep on long train journeys in
-    Britain. For one thing, I can never make myself comfortable in the seat.
-    Then the other passengers usually talk so loudly, or worse still they snore.
-    In addition, there's the constant clickety-click of the wheels on the track.
-    If I do manage to doze off the ticket inspector comes along and wakes me.
+        Britain. For one thing, I can never make myself comfortable in the seat.
+        Then the other passengers usually talk so loudly, or worse still they
+        snore. In addition, there's the constant clickety-click of the wheels on
+        the track. If I do manage to doze off the ticket inspector comes along
+        and wakes me.
     </TabItem>
     <TabItem value="HIS" label="Hîsyêô" default><HisyeoText kind='latin'>
         TBC
     </HisyeoText></TabItem>
     <TabItem value="JPN" label="JPN">
-        日本の長距離列車の旅で、うまく眠れたためしがない。まず，座席で快適な姿勢をとる
-    ことが難しいからだ。そして，他の乗客が大声で話したり、更に悪いことに、いびきをかい
-    たりする。そのうえ、列車が絶えずガタンゴトンと音をたてる。ようやくウトウトしかけた
-    頃に車掌が検札に来て起こされる。
+        日本の長距離列車の旅で、うまく眠れたためしがない。まず，座席で快適な姿勢
+        をとることが難しいからだ。そして，他の乗客が大声で話したり、更に悪いこと
+        に、いびきをかいたりする。そのうえ、列車が絶えずガタンゴトンと音をたて
+        る。ようやくウトウトしかけた頃に車掌が検札に来て起こされる。
     </TabItem>
     <TabItem value="SPA" label="SPA">
-        Siempre me ha costado dormir en los trenes de largo recorrido. Primero, que no consigo sentirme 
-    cómodo en el asiento. Luego, que los demás pasajeros suelen hablar muy alto o, lo que es aún peor, 
-    roncan. Además, está el constante traqueteo de las ruedas sobre el raíl. Y si consigo quedarme 
-    dormido, pasa el revisor y me despierta para pedir el billete.
+        Siempre me ha costado dormir en los trenes de largo recorrido. Primero,
+        que no consigo sentirme cómodo en el asiento. Luego, que los demás
+        pasajeros suelen hablar muy alto o, lo que es aún peor, roncan. Además,
+        está el constante traqueteo de las ruedas sobre el raíl. Y si consigo
+        quedarme dormido, pasa el revisor y me despierta para pedir el billete.
     </TabItem>
     <TabItem value="THA" label="THA">
-        ฉนั พบวา่ การที่ตอ้งนอนหลบั บนรถไฟในเมืองไทยเวลาที่ตอ้งนงั่ ไปไหนไกลๆ เป็นเรื่องยากมาก เกา้อ้ีนงั่ อึดอดัไปสา หรับฉนั
-    ผโู้ดยสารคนอื่นก็คุยกนั เสียงดงั และกรนเสียงดังอีก และยังมีเสียงรถเข็นอีก ถ้าโชคดีฉันหลับได้สกั พกัก็จะมีคนตรวจตวั๋ มาปลุกอยดู่ ี
+        ฉนั พบวา่ การที่ตอ้งนอนหลบั บนรถไฟในเมืองไทยเวลาที่ตอ้งนงั่ ไปไหนไกลๆ
+        เป็นเรื่องยากมาก เกา้อ้ีนงั่ อึดอดัไปสา หรับฉนั ผโู้ดยสารคนอื่นก็คุยกนั
+        เสียงดงั และกรนเสียงดังอีก และยังมีเสียงรถเข็นอีก ถ้าโชคดีฉันหลับได้สกั
+        พกัก็จะมีคนตรวจตวั๋ มาปลุกอยดู่ ี
     </TabItem>
     <TabItem value="VIE" label="VIE">
-        Tôi không tài nào ngủ được mỗi khi đi tàu. Ðầu tiên là tôi không thể tìm thấy một chỗ ngồi thoải 
-    mái; tiếp đó là vì những người bên cạnh: người thì nói quá to; người thì ngáy; hơn nữa tàu chạy quá 
-    ầm. Ðền lúc tôi chợp được mắt thì người soát vé xuất hiện và kiểm tra vé!
+        Tôi không tài nào ngủ được mỗi khi đi tàu. Ðầu tiên là tôi không thể tìm
+        thấy một chỗ ngồi thoải mái; tiếp đó là vì những người bên cạnh: người
+        thì nói quá to; người thì ngáy; hơn nữa tàu chạy quá ầm. Ðền lúc tôi
+        chợp được mắt thì người soát vé xuất hiện và kiểm tra vé!
     </TabItem>
 </Tabs>
 
@@ -660,39 +694,45 @@ Number of syllables:
 <Tabs groupId="sobis-yê-cîes">
     <TabItem value="CMN" label="CMN">
         上个周末没能到你家里聚餐，真对不起。我真的想去看你。倒霉的是，我正要出发时出
-    了点事。当时我是要去地下室拿瓶葡萄酒，偷懒没开灯，在黑暗中踩空了，把脚踝扭了。
+        了点事。当时我是要去地下室拿瓶葡萄酒，偷懒没开灯，在黑暗中踩空了，把脚踝扭了。
     </TabItem>
     <TabItem value="ENG" label="ENG">
         Sorry I didn't come to dinner at the weekend. I was really looking
-    forward to seeing you again. Unfortunately I had a small accident just as I
-    was getting ready to leave. It was when I went down to fetch a bottle of
-    wine from the cellar. I didn't bother to switch the light on, tripped on a
-    loose step in 
-    the dark, and broke my ankle.
+        forward to seeing you again. Unfortunately I had a small accident just
+        as I was getting ready to leave. It was when I went down to fetch a
+        bottle of wine from the cellar. I didn't bother to switch the light on,
+        tripped on a loose step in the dark, and broke my ankle.
     </TabItem>
     <TabItem value="HIS" label="Hîsyêô" default><HisyeoText kind='latin'>
         TBC
     </HisyeoText></TabItem>
     <TabItem value="JPN" label="JPN">
-        先週末の夕食会に伺えず、申し訳ありませんでした。皆様にお会いできるのを本当に楽
-    しみにしておりましたのに。あいにく，出掛けにちょっとしたアクシデントに見舞われてし
-    まったものですから。地下室へワインを取りに行く際に，明かりをつけずに降りたら、暗闇
-    で階段を一段踏み外し足首を骨折してしまったのです。
+        先週末の夕食会に伺えず、申し訳ありませんでした。皆様にお会いできるのを本
+        当に楽しみにしておりましたのに。あいにく，出掛けにちょっとしたアクシデン
+        トに見舞われてしまったものですから。地下室へワインを取りに行く際に，明か
+        りをつけずに降りたら、暗闇で階段を一段踏み外し足首を骨折してしまったので
+        す。
     </TabItem>
     <TabItem value="SPA" label="SPA">
-        Lo siento, pero no voy a poder cenar con vosotros esta noche. ¡Tenía tantas ganas de volver a 
-    veros! Por desgracia, he tenido un pequeño accidente cuando me estaba preparando para salir. Bajé a 
-    la bodega a buscar una botella de vino. Con las prisas, no encendí la luz. Tropecé en la oscuridad con 
-    un escalón que tenía una baldosa suelta y me he roto el tobillo.
+        Lo siento, pero no voy a poder cenar con vosotros esta noche. ¡Tenía
+        tantas ganas de volver a veros! Por desgracia, he tenido un pequeño
+        accidente cuando me estaba preparando para salir. Bajé a la bodega a
+        buscar una botella de vino. Con las prisas, no encendí la luz. Tropecé
+        en la oscuridad con un escalón que tenía una baldosa suelta y me he roto
+        el tobillo.
     </TabItem>
     <TabItem value="THA" label="THA">
-        ขอโทษดว้ยที่ไม่ไดม้ าทานม้ือเยน็ เมื่อสุดสปัดาห์ที่แลว้ ฉนัอยากมาเจอคุณอีกคร้ังจริงๆ
-    แต่โชคไม่ดีมีอุบตัิเหตุนิดหน่อยตอนที่กา ลงัจะออกจากบา้นมาหาคุณ ฉนั รีบเดินไปหยบิไวน์จากห้องใตด้ินโดยที่ไม่ไดเ้ปิดไฟ แล้วพลาดตกบันไดข้อเท้าหัก
+        ขอโทษดว้ยที่ไม่ไดม้ าทานม้ือเยน็ เมื่อสุดสปัดาห์ที่แลว้
+        ฉนัอยากมาเจอคุณอีกคร้ังจริงๆ แต่โชคไม่ดีมีอุบตัิเหตุนิดหน่อยตอนที่กา
+        ลงัจะออกจากบา้นมาหาคุณ ฉนั
+        รีบเดินไปหยบิไวน์จากห้องใตด้ินโดยที่ไม่ไดเ้ปิดไฟ
+        แล้วพลาดตกบันไดข้อเท้าหัก
     </TabItem>
     <TabItem value="VIE" label="VIE">
-        Tôi rất tiếc là không thể đến ăn tối tại nhà anh hôm chủ nhật tuần trước được. Tôi đã rất vui khi 
-    gặp lại anh. Hôm đấy; tôi đã gặp một tai nạn nhỏ khi đi xuống hầm rượu để lấy rượu. Vì không bật đèn 
-    nên tôi đã bước hụt và bị trẹo chân.
+        Tôi rất tiếc là không thể đến ăn tối tại nhà anh hôm chủ nhật tuần trước
+        được. Tôi đã rất vui khi gặp lại anh. Hôm đấy; tôi đã gặp một tai nạn
+        nhỏ khi đi xuống hầm rượu để lấy rượu. Vì không bật đèn nên tôi đã bước
+        hụt và bị trẹo chân.
     </TabItem>
 </Tabs>
 
@@ -707,9 +747,9 @@ Number of syllables:
     </TabItem>
     <TabItem value="ENG" label="ENG">
         There's a short cut over that hill to my house. Some local people say
-        the hill is haunted. No-one likes to pass through those fields after dark.
-        Of course, I don't believe in any of that superstitious nonsense. I just
-        like the picturesque route through the estate.
+        the hill is haunted. No-one likes to pass through those fields after
+        dark. Of course, I don't believe in any of that superstitious nonsense.
+        I just like the picturesque route through the estate.
     </TabItem>
     <TabItem value="HIS" label="Hîsyêô" default><HisyeoText kind='latin'>
         TBC
@@ -721,18 +761,20 @@ Number of syllables:
         ですよ。
     </TabItem>
     <TabItem value="SPA" label="SPA">
-        A mi casa se puede ir por un atajo cruzando el bosque. Los vecinos dicen que el bosque está 
-        embrujado. Nadie quiere pasar por allí cuando oscurece. Yo, por supuesto, no soy supersticioso. A mí 
-        me encanta ir por ese camino tan pintoresco.
+        A mi casa se puede ir por un atajo cruzando el bosque. Los vecinos dicen
+        que el bosque está embrujado. Nadie quiere pasar por allí cuando
+        oscurece. Yo, por supuesto, no soy supersticioso. A mí me encanta ir por
+        ese camino tan pintoresco.
     </TabItem>
     <TabItem value="THA" label="THA">
         มีทางลัดข้ามเขามาที่บ้านฉัน คนแถวน้ีบอกวา่ ทางลดัมีผีคอยหลอกหลอนอยู่และไม่มีใครกลา้เดินผา่ นทางน้ีตอนกลางคืน แต่ฉนัก็ไม่เชื่อเรื่องพวกน้ี
         ฉนัแค่ชอบที่จะใชเ้ส้นทางสวยๆ น่าเดิน
     </TabItem>
     <TabItem value="VIE" label="VIE">
-        Ðể đến nhà tôi; anh có thể đi đường tắt qua quả đồi. Người làng tôi không thích đi đường đấy vì 
-        họ cho rằng quả đồi có ma; nhất là vào ban đêm. Tôi không tin vào những lời đồn đại đó. Tôi lại rất 
-        thích đi đường đó vì nó rất thơ mộng.
+        Ðể đến nhà tôi; anh có thể đi đường tắt qua quả đồi. Người làng tôi
+        không thích đi đường đấy vì họ cho rằng quả đồi có ma; nhất là vào ban
+        đêm. Tôi không tin vào những lời đồn đại đó. Tôi lại rất thích đi đường
+        đó vì nó rất thơ mộng.
     </TabItem>
 </Tabs>
 
