Add another parallel speech corpus passage translation

--- a/docs/works/parallel-speech-corpus.mdx
+++ b/docs/works/parallel-speech-corpus.mdx
@@ -398,6 +398,10 @@ Number of Syllables:
 
 Number of syllables:
 
+| Mandarin | English | Hîsyêô | Japanese | Spanish | Thai | Vietnamese |
+|----------|---------|--------|----------|---------|------|------------|
+|      100 |      92 |    149 |      156 |     153 |  103 |        102 |
+
 <Tabs  groupId="sobis-yê-cîes">
     <TabItem value="CMN" label="CMN">
         我妻子下个月有一个复杂的飞行计划。请你给建议一个最划算的安排。她要参加一系列
@@ -412,7 +416,12 @@ Number of syllables:
         suitable accomodation? She doesn't like large, anonymous hotels.
     </TabItem>
     <TabItem value="HIS" label="Hîsyêô" default><HisyeoText kind='latin'>
-        TBC
+        hûnsûon noyo fuî yôcno wokût kon xîkô fonfûk hoî wuto uklo. ¿nîmû bi
+        dôkcon ke yundôû noyo hôn yôcno yê mîkdol munî yê cûtî êto ko? nîo fuî
+        zûnlo yê mozulis sûn suhot eson xe ilik mutyu, mût suhot tîû xe cihôû
+        mutyu, hoî sinsî Bolis, sînsî Buhûc, sinsî Filonkufûl, sinsî Lômo ûn
+        sinsî Honbûl bi lono ûnîdû. ¿nîmû kôî bêsnêhot kon xîkô obunyun yê lono
+        mûun ûn niwos dûndon ko? nîo sûko yôk niwos êfun cênbô yê bûzôk wîxês. 
     </HisyeoText></TabItem>
     <TabItem value="JPN" label="JPN">
         来月、妻がパリ、ブリュージュ、フランクフルト、ローマ及びハンブルクで行われる一
